Ent-1873: Port EntitlementResource to spec-first - Add endpoint definitions - Add definition for the KeyValueParamDto - Add KeyValueParamConverted
